2006-06-09  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclGetDate.y: Fixed a thread safety bug in the generated
	* library/clock.tcl:    Bison parser (needed a %pure-parser
	* tests/clock.test:     declaration to avoid static variables).
				Discovered that the %pure-parser declaration
	                        allowed for returning the Bison error message
	                        to the Tcl caller in the event of a syntax
	                        error, so did so.
	* generic/tclDate.c: bison 2.3
	
2006-06-08  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Asia/Dhaka: New DST rule for Bangladesh.
	(Olson's tzdata2009i.)
	
2009-06-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Replace dynamically-initialized table with
	a table of static constants in the lookup table for exponent operator
	computations that fit in a 64 bit integer result.

	* generic/tclExecute.c:	Corrected implementations and selection
	logic of the INST_EXPON instruction to fix [Bug 2798543].

2009-06-01  Don Porter  <dgp@users.sourceforge.net>

	* tests/expr.test:	Added many tests demonstrating the broken
	cases of [Bug 2798543].

2009-05-30  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Africa/Cairo:
	* library/tzdata/Asia/Amman: Olson's tzdata2009h.
	
2009-05-29  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Fixed handling of cpu ia64,
	* library/platform/pkgIndex.tcl: taking ia64_32 into account
	* unix/Makefile.in: now. Bumped version to 1.0.5. Updated the
	* win/Makefile.in: installation commands.

2009-05-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclObj.c (Tcl_GetCommandFromObj): fix for bug [2785893],
	insure that a command in a deleted namespace cannot be found
	through a cached name.
	
2009-05-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:   Improve overflow error message from
	[string repeat].  [Bug 2582327]

2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>
